; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_btree_node_get_ptr.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_nilfs2.c_grub_nilfs2_btree_node_get_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_nilfs2_data = type { i32 }
%struct.grub_nilfs2_btree_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_nilfs2_data*, %struct.grub_nilfs2_btree_node*, i32)* @grub_nilfs2_btree_node_get_ptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_nilfs2_btree_node_get_ptr(%struct.grub_nilfs2_data* %0, %struct.grub_nilfs2_btree_node* %1, i32 %2) #0 {
  %4 = alloca %struct.grub_nilfs2_data*, align 8
  %5 = alloca %struct.grub_nilfs2_btree_node*, align 8
  %6 = alloca i32, align 4
  store %struct.grub_nilfs2_data* %0, %struct.grub_nilfs2_data** %4, align 8
  store %struct.grub_nilfs2_btree_node* %1, %struct.grub_nilfs2_btree_node** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.grub_nilfs2_data*, %struct.grub_nilfs2_data** %4, align 8
  %8 = load %struct.grub_nilfs2_btree_node*, %struct.grub_nilfs2_btree_node** %5, align 8
  %9 = call i32* @grub_nilfs2_btree_node_dptrs(%struct.grub_nilfs2_data* %7, %struct.grub_nilfs2_btree_node* %8)
  %10 = load i32, i32* %6, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @grub_le_to_cpu64(i32 %13)
  ret i32 %14
}

declare dso_local i32 @grub_le_to_cpu64(i32) #1

declare dso_local i32* @grub_nilfs2_btree_node_dptrs(%struct.grub_nilfs2_data*, %struct.grub_nilfs2_btree_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
